--- a/doc.tex
+++ b/doc.tex
@@ -1,4 +1,40 @@
-\documentclass{ctexart}
+\documentclass[a4paper]{article}
+\usepackage{graphicx}
+\usepackage{listings}
+\lstset{language=Matlab}
+\lstset{breaklines}
+\lstset{extendedchars=false}
+
+\usepackage{amsmath,amsfonts,amsthm,amssymb}
+\theoremstyle{definition}
+\newtheorem{thm}{Theorem}
+\newtheorem{exmp}{Example}
+\newtheorem{defn}{Definition}
+\newtheorem{lema}{Lemma}
+\newtheorem{prop}{Proposition}
+\newtheorem{coro}{Corollary}
+
+
+\renewcommand{\baselinestretch}{1.25}
+
+%------------setlength----------------%
+\setlength{\textwidth}{162mm}
+%\setlength{\textheight}{190mm}
+\setlength{\textheight}{231mm}
+\setlength{\headheight}{-0.1cm}
+\setlength{\topmargin}{-0.1cm}
+\setlength{\oddsidemargin}{-0cm}
+\setlength{\evensidemargin}{-0cm}
+
+\setlength{\parskip}{1mm}
+\setlength{\unitlength}{1mm}
+\setlength{\parindent}{2em}
+
+\title{Project 1}
+
+\author{Li Zhiqi\quad3180103041}
+
 \begin{document}
-Protect01
+\maketitle
+\section{Question restatement}
 \end{document}
